--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Helloo World !</title>
+	<title>Hello World !</title>
 </head>
 <body>
 <h1>Hello World !</h1>
