--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>Hello, world!</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-md navbar-light bg-light">
+  <nav class="navbar navbar-expand-md navbar-dark bg-dark">
        <a href="#"class-"navbar-brand"><img src="logo.png" width="50px" height="50px" class="d-inline-block align-top" alt=""></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
