--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
-       <a href="#"class-"navbar-brand"><img src="logo.png" width="50px" height="50px" class="d-inline-block align-top" alt=""></a>
+       <a href="#"class-"navbar-brand"><img src="logo.png" width="40px" height="40px" class="d-inline-block align-top img-thumbnail" alt=""></a>
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
