--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <title>Hello, world!</title>
 </head>
 <body>
+
+<!-- debut navbar -->
   <nav class="navbar navbar-expand-md navbar-dark bg-dark">
        <a href="index.html"class-"navbar-brand"><img src="logo.png" width="40px" height="40px" class="d-inline-block align-top img-thumbnail" alt=""></a>
 
@@ -45,6 +47,71 @@
     </form>
   </div>
 </nav>
+<!-- fin navbar -->
+
+<!-- debut card -->
+<section class="row">
+
+  <div class="col-12 col-md-6 col-lg-3">
+   <div class="card">
+    <img src="tigre1.jpg" alt="image_tigre1" class="card-img-top" \>
+    <div class="card-body">
+     <p class="card-text"><h1 class="h3 card-title">Lorem ipsum dolor</h1>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   </div>
+   </div>
+   </div>
+
+     <div class="col-12 col-md-6 col-lg-3">
+   <div class="card">
+    <img src="tigre4.jpg" alt="image" class="card-img-top" \>
+    <div class="card-body">
+     <p class="card-text"><h1 class="h3 card-title">Lorem ipsum dolor</h1>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   </div>
+   </div>
+   </div>
+
+     <div class="col-12 col-md-6 col-lg-3">
+   <div class="card">
+    <img src="tigre3.jpg" alt="image" class="card-img-top" \>
+    <div class="card-body">
+     <p class="card-text"><h1 class="h3 card-title">Lorem ipsum dolor</h1>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   </div>
+   </div>
+   </div>
+
+     <div class="col-12 col-md-6 col-lg-3">
+   <div class="card">
+    <img src="tigre4.jpg" alt="image" class="card-img-top" \>
+    <div class="card-body">
+     <p class="card-text"><h1 class="h3 card-title">Lorem ipsum dolor</h1>. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+     consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+   </div>
+   </div>
+   </div>
+
+ </section>
+
+<!--  fin card -->
+
   <h1>Hello, world!</h1>
   <h2>Gr4vity</h2>
   <p><strong>Lorem ipsum dolor sit</strong> amet, consectetur adipisicing elit, sed do eiusmod
